# DocsAuditor

./: .gitignore  .vscodeignore  AGENTS.md  NOTICE.md  README.md  package-lock.json  package.json  package.nls.de.json  package.nls.es.json  package.nls.et.json  package.nls.fr.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.vi.json  package.nls.zh-cn.json  package.nls.zh-tw.json  tsconfig.json  やることリスト.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-14-readme-and-agents.md
docs/superpowers/specs/: 2026-06-14-readme-design.md
docs/variables'n'functions/: [CPP]sample.md  [CSharp]sample.md  [C]sample.md  [Go]sample.md  [Java]sample.md  [Kotlin]sample.md  [Python]sample.md  [Ruby]sample.md  [Rust]auditor.md  [Rust]hfsm.md  [Rust]i18n.md  [Rust]locker.md  [Rust]main.md  [Rust]parser.md  [Rust]sample.md  [Swift]sample.md  [TypeScript]extension.md  [TypeScript]sample.md
server/: Cargo.toml
server/locales/: de.json  en.json  es.json  et.json  fr.json  ja.json  ko.json  vi.json  zh-cn.json  zh-tw.json
server/src/: auditor.rs  i18n.rs  locker.rs  main.rs  parser.rs
server/src/state/: hfsm.rs  mod.rs
src/: extension.ts  sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.kt  sample.py  sample.rb  sample.rs  sample.swift  sample.ts
